superposition methods and results update

--- a/biblio.bib
+++ b/biblio.bib
@@ -72,4 +72,151 @@
   publisher={Frontiers Media SA}
 }
 
+@article{oldfield1971assessment,
+  title={The assessment and analysis of handedness: the Edinburgh inventory},
+  author={Oldfield, Richard C},
+  journal={Neuropsychologia},
+  volume={9},
+  number={1},
+  pages={97--113},
+  year={1971},
+  publisher={Elsevier}
+}
+
+@article{chaari2011wavelet,
+  title={A wavelet-based regularized reconstruction algorithm for SENSE parallel MRI with applications to neuroimaging},
+  author={Cha{\^a}ri, Lotfi and Pesquet, Jean-Christophe and Benazza-Benyahia, Amel and Ciuciu, Philippe},
+  journal={Medical image analysis},
+  volume={15},
+  number={2},
+  pages={185--201},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{klein2005mindboggle,
+  title={Mindboggle: a scatterbrained approach to automate brain labeling},
+  author={Klein, Arno and Hirsch, Joy},
+  journal={NeuroImage},
+  volume={24},
+  number={2},
+  pages={261--280},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@inproceedings{collins1999animal+,
+  title={ANIMAL+ INSECT: improved cortical structure segmentation},
+  author={Collins, D and Zijdenbos, Alex and Baar{\'e}, Wim and Evans, Alan},
+  booktitle={Information processing in medical imaging},
+  pages={210--223},
+  year={1999},
+  organization={Springer}
+}
+
+@article{greve2009accurate,
+  title={Accurate and robust brain image alignment using boundary-based registration},
+  author={Greve, Douglas N and Fischl, Bruce},
+  journal={Neuroimage},
+  volume={48},
+  number={1},
+  pages={63--72},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{henson2003anovas,
+  title={ANOVAs and SPM},
+  author={Henson, RNA and Penny, WD},
+  journal={Wellcome Department of Imaging Neuroscience, London, UK},
+  year={2003}
+}
+
+@article{krause2014expyriment,
+  title={Expyriment: A Python library for cognitive and neuroscientific experiments},
+  author={Krause, Florian and Lindemann, Oliver},
+  journal={Behavior Research Methods},
+  volume={46},
+  number={2},
+  pages={416--428},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{abdulrahman2016effect,
+  title={Effect of trial-to-trial variability on optimal event-related fMRI design: Implications for Beta-series correlation and multi-voxel pattern analysis},
+  author={Abdulrahman, Hunar and Henson, Richard N},
+  journal={NeuroImage},
+  volume={125},
+  pages={756--766},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{mumford2012deconvolving,
+  title={Deconvolving BOLD activation in event-related designs for multivoxel pattern classification analyses},
+  author={Mumford, Jeanette A and Turner, Benjamin O and Ashby, F Gregory and Poldrack, Russell A},
+  journal={Neuroimage},
+  volume={59},
+  number={3},
+  pages={2636--2643},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{cisler2014comparison,
+  title={A comparison of statistical methods for detecting context-modulated functional connectivity in fMRI},
+  author={Cisler, Josh M and Bush, Keith and Steele, J Scott},
+  journal={Neuroimage},
+  volume={84},
+  pages={1042--1052},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{gorgolewski2011nipype,
+  title={Nipype: a flexible, lightweight and extensible neuroimaging data processing framework in python},
+  author={Gorgolewski, Krzysztof and Burns, Christopher D and Madison, Cindee and Clark, Dav and Halchenko, Yaroslav O and Waskom, Michael L and Ghosh, Satrajit S},
+  journal={Frontiers in neuroinformatics},
+  volume={5},
+  year={2011},
+  publisher={Frontiers Media SA}
+}
+
+@misc{ellis2010time,
+  title={Time-domain scrambling of audio signals in Matlab},
+  author={Ellis, DPW},
+  year={2010}
+}
+
+@article{fontaine2011brian,
+  title={Brian hears: online auditory processing using vectorization over channels},
+  author={Fontaine, Bertrand and Goodman, Dan FM and Benichoux, Victor and Brette, Romain},
+  journal={frontiers in Neuroinformatics},
+  volume={5},
+  year={2011},
+  publisher={Frontiers Media SA}
+}
+
+@article{bouchard2013functional,
+  title={Functional organization of human sensorimotor cortex for speech articulation},
+  author={Bouchard, Kristofer E and Mesgarani, Nima and Johnson, Keith and Chang, Edward F},
+  journal={Nature},
+  volume={495},
+  number={7441},
+  pages={327},
+  year={2013},
+  publisher={NIH Public Access}
+}
+
+@article{pallier2011cortical,
+  title={Cortical representation of the constituent structure of sentences},
+  author={Pallier, Christophe and Devauchelle, Anne-Dominique and Dehaene, Stanislas},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={108},
+  number={6},
+  pages={2522--2527},
+  year={2011},
+  publisher={National Acad Sciences}
+}
 
