--- a/part_II/chapter_1.tex
+++ b/part_II/chapter_1.tex
@@ -1,28 +1,36 @@
 \begin{fullwidth}
 \chapter{\label{ch:super_intro}
-The superposition principle and the neuroimaging of language}
+The superposition principle and Neuroimaging}
 \end{fullwidth}
 
 \begin{chabstract}
 
-In this chapter we introduce the problem of variable binding from a connectionist perspective. We show how this problem can be addressed by Smolensky's tensor framework and introduce its superposition principle. Finally we review the neuroimaging literature indirectly linked to the superposition principle and directly linked to language and morphology.
+In this chapter we introduce .
 
 \end{chabstract}
 
 
-\section{The problem of variable binding from a connectionist perspective}
-% review the problem of binding from a connectionist perspective
+\section{Smolensky's tensor framework and variable binding}
 
 
-\section{Smolensky's tensor framework and the superposition principle}
-% review the mechanism of the tensor framework and its operational implications. In particular the substraction of components.
+\section{The superposition principle from Smolensky's tensor framework}
 
 
-\section{Neuroimaging of superposition}
+\subsection{Neural interpretation}
+
+
+\subsection{Bold-fMRI interpretation}
+% review the problem of binding from a connectionist perspective with Smolensky tensors
+
+
+\subsection{Neuroimaging of superposition}
+% MAYBE MERGE WITH PREVIOUS POINT, it would be a comment on previous cases of superposition demonstrated with Bold-FMRI experiments.
+
 % Superposition related experiments, not necessarily language related?
 % The bag of words classification that works well in practice? Counterevidence of superposition
 % trivial evidence in sensory systems like retinotopy?
-
-\section{Neuroimaging of language (with emphasis on morphology)}
 % Quick introduction to the language network with emphasis of the Federonko language network localizers metanalysis.
 % Since we are working with syllables, the morphology effects metaanalysis literature is relevant. Coordinates of previous effects. Would we expect superposition in some type of effects? (Careful not to overlap with discussion)
+
+\section{The superposition principle applied to syllable combinations}
+% review the mechanism of the tensor framework and its operational implications. In particular the substraction of components.
