--- a/thesis.tex
+++ b/thesis.tex
@@ -57,7 +57,7 @@
 %\setcitestyle{authoryear}
 
 
-\input{myDef.tex} 
+\input{myDef.tex}
 \input{structure.tex}
 
 \newcommand{\myspace}{0.03}
@@ -253,13 +253,16 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 \cleardoublepage
 % Introducing the binding problem in all generality and the variable binding problem in specific.
 %\input{part_I/chapter_1.tex}
-\FloatBarrier
-% Neuroimaging explorations of variable binding. fMRI and ECoG techniques.
-%\input{part_I/chapter_2.tex}
-\FloatBarrier
+%\FloatBarrier
 % Neural Modelling of variable binding. Tensor framework vs NBA. ANN vs SNN.
 %\input{part_I/chapter_3.tex}
-\FloatBarrier
+%\FloatBarrier
+% Neuroimaging techniques. fMRI and ECoG techniques.
+%\input{part_I/chapter_2.tex}
+%\FloatBarrier
+% Machine learning techniques. Searchlight MVPA. BIclustering. SVC. DTW. KNN.
+%\input{part_I/chapter_2.tex}
+%\FloatBarrier
 
 
 \part{Contribution -- fMRI -- Testing the superposition principle in two-syllabic representations}
@@ -274,11 +277,10 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 \input{part_II/chapter_3.tex}
 \FloatBarrier
 % Discussion
-% \input{part_II/chapter_4.tex}
-%\FloatBarrier
+\input{part_II/chapter_4.tex}
+\FloatBarrier
 
-
-\part{Contribution -- ECoG -- Exploring the neural temporal signatures of word binding}
+\part{Contribution -- Modelling -- The neural dynamics of binding in language with the Neural Blackboard Architecture}
 \cleardoublepage
 % Introduction
 % \input{part_III/chapter_1.tex}
@@ -294,7 +296,7 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 %\FloatBarrier
 
 
-\part{Contribution -- Modelling -- The neural dynamics of binding in language with the Neural Blackboard Architecture}
+\part{Contribution -- ECoG -- Exploring the neural temporal signatures of word binding}
 \cleardoublepage
 % Introduction
 % \input{part_IV/chapter_1.tex}
